移除oss支持
