# server/docs/swagger.json
@@ -4514,29 +4514,6 @@
         }
     },
     "definitions": {
-        "config.AliyunOSS": {
-            "type": "object",
-            "properties": {
-                "access-key-id": {
-                    "type": "string"
-                },
-                "access-key-secret": {
-                    "type": "string"
-                },
-                "base-path": {
-                    "type": "string"
-                },
-                "bucket-name": {
-                    "type": "string"
-                },
-                "bucket-url": {
-                    "type": "string"
-                },
-                "endpoint": {
-                    "type": "string"
-                }
-            }
-        },
         "config.Autocode": {
             "type": "object",
             "properties": {
@@ -4580,38 +4557,6 @@
                     "type": "string"
                 },
                 "web-table": {
-                    "type": "string"
-                }
-            }
-        },
-        "config.AwsS3": {
-            "type": "object",
-            "properties": {
-                "base-url": {
-                    "type": "string"
-                },
-                "bucket": {
-                    "type": "string"
-                },
-                "disable-ssl": {
-                    "type": "boolean"
-                },
-                "endpoint": {
-                    "type": "string"
-                },
-                "path-prefix": {
-                    "type": "string"
-                },
-                "region": {
-                    "type": "string"
-                },
-                "s3-force-path-style": {
-                    "type": "boolean"
-                },
-                "secret-id": {
-                    "type": "string"
-                },
-                "secret-key": {
                     "type": "string"
                 }
             }
@@ -4687,26 +4632,6 @@
             "type": "object",
             "properties": {
                 "dir": {
-                    "type": "string"
-                }
-            }
-        },
-        "config.HuaWeiObs": {
-            "type": "object",
-            "properties": {
-                "access-key": {
-                    "type": "string"
-                },
-                "bucket": {
-                    "type": "string"
-                },
-                "endpoint": {
-                    "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "secret-key": {
                     "type": "string"
                 }
             }
@@ -4965,39 +4890,6 @@
                 }
             }
         },
-        "config.Qiniu": {
-            "type": "object",
-            "properties": {
-                "access-key": {
-                    "description": "秘钥AK",
-                    "type": "string"
-                },
-                "bucket": {
-                    "description": "空间名称",
-                    "type": "string"
-                },
-                "img-path": {
-                    "description": "CDN加速域名",
-                    "type": "string"
-                },
-                "secret-key": {
-                    "description": "秘钥SK",
-                    "type": "string"
-                },
-                "use-cdn-domains": {
-                    "description": "上传是否使用CDN上传加速",
-                    "type": "boolean"
-                },
-                "use-https": {
-                    "description": "是否使用https",
-                    "type": "boolean"
-                },
-                "zone": {
-                    "description": "存储区域",
-                    "type": "string"
-                }
-            }
-        },
         "config.Redis": {
             "type": "object",
             "properties": {
@@ -5029,9 +4921,6 @@
         "config.Server": {
             "type": "object",
             "properties": {
-                "aliyun-oss": {
-                    "$ref": "#/definitions/config.AliyunOSS"
-                },
                 "autocode": {
                     "description": "auto",
                     "allOf": [
@@ -5039,9 +4928,6 @@
                             "$ref": "#/definitions/config.Autocode"
                         }
                     ]
-                },
-                "aws-s3": {
-                    "$ref": "#/definitions/config.AwsS3"
                 },
                 "captcha": {
                     "$ref": "#/definitions/config.Captcha"
@@ -5072,9 +4958,6 @@
                 "excel": {
                     "$ref": "#/definitions/config.Excel"
                 },
-                "hua-wei-obs": {
-                    "$ref": "#/definitions/config.HuaWeiObs"
-                },
                 "jwt": {
                     "$ref": "#/definitions/config.JWT"
                 },
@@ -5103,9 +4986,6 @@
                 "pgsql": {
                     "$ref": "#/definitions/config.Pgsql"
                 },
-                "qiniu": {
-                    "$ref": "#/definitions/config.Qiniu"
-                },
                 "redis": {
                     "$ref": "#/definitions/config.Redis"
                 },
@@ -5114,9 +4994,6 @@
                 },
                 "system": {
                     "$ref": "#/definitions/config.System"
-                },
-                "tencent-cos": {
-                    "$ref": "#/definitions/config.TencentCOS"
                 },
                 "zap": {
                     "$ref": "#/definitions/config.Zap"
@@ -5273,29 +5150,6 @@
                 "use-redis": {
                     "description": "使用redis",
                     "type": "boolean"
-                }
-            }
-        },
-        "config.TencentCOS": {
-            "type": "object",
-            "properties": {
-                "base-url": {
-                    "type": "string"
-                },
-                "bucket": {
-                    "type": "string"
-                },
-                "path-prefix": {
-                    "type": "string"
-                },
-                "region": {
-                    "type": "string"
-                },
-                "secret-id": {
-                    "type": "string"
-                },
-                "secret-key": {
-                    "type": "string"
                 }
             }
         },
