# server/utils/upload/upload.go
@@ -21,16 +21,6 @@ func NewOss() OSS {
 	switch global.GVA_CONFIG.System.OssType {
 	case "local":
 		return &Local{}
-	case "qiniu":
-		return &Qiniu{}
-	case "tencent-cos":
-		return &TencentCOS{}
-	case "aliyun-oss":
-		return &AliyunOSS{}
-	case "huawei-obs":
-		return HuaWeiObs
-	case "aws-s3":
-		return &AwsS3{}
 	default:
 		return &Local{}
 	}
